# hugh-build-system

./: CMakeLists.txt  README.rst
dummy/: CMakeLists.txt  README.rst
dummy/cmake/: HUGH_DUMMY_SetupOptions.cmake
dummy/inc/hugh/dummy/: dummy.hpp  dummy.inl
dummy/src/: CMakeLists.txt
dummy/src/app/dummy/: CMakeLists.txt  main.cpp
dummy/src/lib/dummy/: CMakeLists.txt  dummy.cpp
dummy/src/lib/dummy/test/: CMakeLists.txt  dummy.cpp
share/doc/hugh/: CMakeLists.txt  index.html
share/hugh/: CMakeLists.txt
share/hugh/cmake/: CMakeAddons_DefaultOptions.cmake  CMakeAddons_DefaultPaths.cmake  CMakeAddons_DefaultVariables.cmake  CMakeAddons_SetupOptions.cmake  CMakeAddons_SetupPaths.cmake  CMakeAddons_SetupVariables.cmake  CMakeLists.txt  CTestConfig.cmake.in  CheckOutOfTreeBuild.cmake  FindAntTweakBar.cmake  FindFreeGLUT.cmake  FindGLEW.cmake  FindGLI.cmake  FindGLM.cmake  FindHUGH.cmake  FindOGLplus.cmake  FindSDL.cmake  FindWindowsSDK.cmake  FindXSDCXX.cmake  SetupBuildType.cmake  SetupCompilerDefaults.cmake  SetupDocumentation.cmake  SetupFunctionsAndMacros.cmake  SetupHunter.cmake  SetupInitialCache.cmake  SetupInstallPrefix.cmake  SetupPackaging.cmake  SetupPlatformAndArchitecture.cmake  SetupProjectDefaults.cmake  SetupUnitTests.cmake  ShowConfigSummary.cmake
share/hugh/cmake/compiler/: clang.cmake  common-clang-gnu.cmake  gnu.cmake  msvc.cmake
share/hugh/cmake/functions/: cma_fxc_compile.cmake  cma_list_targets.cmake  cma_setup_application.cmake  cma_setup_export.cmake  cma_setup_file_target.cmake  cma_setup_library.cmake  cma_setup_test.cmake  cma_utilities.cmake
share/hugh/cmake/scripts/: test_coverage_collect.cmake  test_coverage_zero.cmake
share/hugh/doxygen/: CMakeLists.txt  base.dev.doxygen.cfg.in  base.usr.doxygen.cfg.in  common.doxygen.cfg.in
share/hugh/proto/: CMakeLists.txt  proto.CMakeLists.txt  proto.class.cpp  proto.class.hpp  proto.class.inl  proto.main.cpp  proto.module.c  proto.module.cmake  proto.module.h  proto.shader.glsl  proto.shader.hlsl  proto.test.cpp
share/hugh/travis.ci/: CMakeLists.txt  fetch-or-update-git-repo.sh
src/app/: CMakeLists.txt
