# -*- Mode:cmake -*-

####################################################################################################
#                                                                                                  #
# Copyright (C) 2016 University of Hull                                                            #
#                                                                                                  #
####################################################################################################

add_subdirectory(cmake)
add_subdirectory(proto)
add_subdirectory(travis.ci)
